# shape-challenge-2014

./: CMakeLists.txt  LICENSE  README.md
src/: common.cpp  compactness.cpp  config.cpp  config.h  correspondence.cpp  distances.cpp  generalization.cpp  logger.h  shapemodelvalidation.cpp  shapemodelvalidation.h  shapemodelvalidation_vsd.cpp  specificity.cpp  utils.cpp
